css/styles.css
/* ==========================================================================
Fonts
========================================================================== */
@font-face { font-family: 'Open Sans'; font-style: normal; font-weight: 400;
  src: local('Open Sans'), local('OpenSans'), url(http://www.kaykanloo.com/fonts/opensans.woff) format('woff');}
@font-face { font-family: 'Open Sans'; font-style: italic; font-weight: 400;
  src: local('Open Sans Italic'), local('OpenSans-Italic'), url(http://www.kaykanloo.com/fonts/opensansitalic.woff) format('woff');}
@font-face {font-family: 'BNazanin';
src: url('http://www.kaykanloo.com/fonts/BNazanin.woff') format('woff');}
/* ==========================================================================
General Style
========================================================================== */
html {position: relative; min-height: 100%; min-width:100%}
html, body{font-family: 'Open Sans', sans-serif; background-color: #f4f5fc;/*Fall Back*/}
a { color: #282f35; -webkit-transition: all .25s ease; -moz-transition: all .25s ease; -ms-transition: all .25s ease; -o-transition: all .25s ease; transition: all .25s ease; }
a:hover { color: #64c29e; text-decoration: none; }
a:focus{outline:0;text-decoration: none;}
p {font-size: 14px; color: #282f35; font-weight: 300; word-spacing: 2px; line-height: 1.8em;}
h1{font-size: 28px;margin-top:0px;margin-bottom:10px;}
h2{font-size: 24px;margin-top:0px;margin-bottom:10px;}
h3{font-size: 20px;margin-top:0px;margin-bottom:10px;}
/* ==========================================================================
Fixed Header
========================================================================== */
.navbar .navbar-nav { display: inline-block; float: none;}
.navbar .navbar-collapse { text-align: center;}
.navbar-default { background-color: #f4f5fc; border-color: #f4f5fc;}
.navbar-default .navbar-nav > li > a {text-decoration: none;margin-left: 3px;margin-right:3px;border-bottom: 2px solid #FF9900;}
.navbar-default .navbar-nav > .active > a, 
.navbar-default .navbar-nav > .active > a:hover, 
.navbar-default .navbar-nav > .active > a:focus  { border-bottom: 2px solid #848789;background-color: #f4f5fc;}
/* ==========================================================================
Main Content
========================================================================== */
.MainContent{ margin-top:70px; margin-bottom: 20px; padding:10px 15px 10px 15px;
border: 2px solid #EAEBF2; border-radius:10px; box-shadow:2px 2px 3px gray;
background: rgb(235,236,242); /* Old browsers */
background: -moz-linear-gradient(top,  rgba(249,250,255,1) 0%, rgba(234,235,242,1) 100%); /* FF3.6+ */
background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(249,250,255,1)), color-stop(100%,rgba(234,235,242,1))); /* Chrome,Safari4+ */
background: -webkit-linear-gradient(top,  rgba(249,250,255,1) 0%,rgba(234,235,242,1) 100%); /* Chrome10+,Safari5.1+ */
background: -o-linear-gradient(top,  rgba(249,250,255,1) 0%,rgba(234,235,242,1) 100%); /* Opera 11.10+ */
background: -ms-linear-gradient(top,  rgba(249,250,255,1) 0%,rgba(234,235,242,1) 100%); /* IE10+ */
background: linear-gradient(to bottom,  rgba(249,250,255,1) 0%,rgba(234,235,242,1) 100%); /* W3C */
filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f9faff', endColorstr='#eaebf2',GradientType=0 ); /* IE6-9 */}
.ContentLangBar{text-align:right;}
.ContentLangBarFa{text-align:left;}
.LangButton{padding:1px 5px 1px 5px;border-radius:5px; background-color: #848789; border-color: #848789; color: white;}
.ContentHeader{font-style: italic; text-align:center;padding-bottom:10px}
.ContentHeaderFa h1{font-family: BNazanin,IRNazanin,'BNazanin'; font-size: 30px;text-align:center;direction:rtl;padding-bottom:10px}
.ContentText{text-align:justify;padding-left:5px;border-left: 2px solid #FF9900;}
.ContentTextFa{padding-right:5px;border-right: 2px solid #FF9900;}
.ContentTextFa p{font-family: BNazanin,IRNazanin,'BNazanin'; font-size: 18px;text-align:justify;direction:rtl;}
.ContentTextCenter{text-align:center;padding-left:5px;border-left: 2px solid #FF9900;padding-right:5px;border-right: 2px solid #FF9900;}
.ContentTextCenterFa{padding-left:5px;border-left: 2px solid #FF9900;padding-right:5px;border-right: 2px solid #FF9900;}
.ContentTextCenterFa p{font-family: BNazanin,'BNazanin'; font-size: 18px;text-align:center;direction:rtl;}
/* ==========================================================================
Knowledge Base 
========================================================================== */
.KBIdeas,.KBSoftEng , .KBEssCell,.KBOtherTopCell, .KBOtherBottCell, .KBBeyond 
{border: 2px solid gray;border-radius:7px;text-align:center;vertical-align:middle;line-height: 1.8em;padding-top:4px;padding-bottom:4px;}
.KBContent,.KBIdeas, .KBSoftEng, .KBWrapper, .KBEss, .KBOtherTop, .KBOtherBott, .KBBeyond,
.KBEssCell, .KBOtherTopCell, .KBOtherBottCell{margin:2px 0px;}
.CompSci{border: 2px dashed #888;border-radius:7px;padding:0px 2px;}
.KBContent .panel{background-color:transparent;margin-bottom:0px;border:0px;box-shadow:none;}
.KBContent  .list-group{text-align:center;margin-bottom:0px;}
.KBContent  .list-group-item{padding-top:5px;background-color: #f4f5fc;background-color: transparent;border-color:#f4f5fc;}
.KBContent  .list-group-item > a{text-decoration: none;line-height: 1.8em;padding:0px 3px 5px 3px;border-bottom: 2px solid #FFC773;}
.KBContent  .list-group-item:first-child{border: 2px solid gray;border-radius:7px;margin-bottom:2px;}
.KBContent  .list-group-item:last-child{border: 2px solid gray;border-radius:7px;margin-bottom:2px;padding:0px;}
.KBContent  .list-group-item:last-child > a{border-bottom: 0px;opacity:0.5;}
.KBContent  .list-group-item:last-child > a:hover{opacity:1.0;}
/* ==========================================================================
Knowledge Base Pages
========================================================================== */
.breadcrumb{background-color: #DFE0E6;color:#777;}
.breadcrumb > li + li:before{color:#777;}
/* ==========================================================================
Sticky Footer 
========================================================================== */
body {margin-bottom: 95px;}
footer {position: absolute; bottom: 0; width: 100%; height: 95px;
background-color: #f4f5fc; background-color: rgba(244,245,252,0);}
/* ==========================================================================
Footer columns
========================================================================== */
footer p { font-size: 13px; color: #848789; margin: 0; }
.footer-leftcol { text-align: left; margin-top: 28px; }
.footer-rightcol{ text-align: right; font-style: italic; margin-top: 26px;}
.footer-midcol { margin-left: auto; margin-right: auto;}
.footer-midcol { text-align: center; padding: 0; }
.footer-midcol a { opacity: 1; }
.footer-midcol a:hover { opacity: 0.5; }
/* ==========================================================================
Queries
========================================================================== */
/* Main content width */
@media (max-width:650px) {.MainContent{margin-right:5%; margin-left:5%;}}
@media (min-width:651px) and (max-width:991px) {.MainContent{margin-right:10%; margin-left:10%;}}
@media (min-width:992px) {.MainContent{margin-right:20%; margin-left:20%;}}
/* Non-Mobile View */
@media (min-width: 768px) { .navbar-brand { display: none; } }
/* Footer version */
@media screen and (max-width:991px) { .BigScreen {display:none;}  .footer-midcol {margin-top: 25px; } }
@media screen and (min-width:992px) { .SmallScreen {display:none;} .footer-midcol {margin-top: 20px; } }
/* Knowledge Base Contents */
@media screen and (min-width:769px){
.KBEssCell, .KBOtherTopCell, .KBOtherBottCell{display:table-cell;}
.KBEss, .KBOtherTop, .KBOtherBott{display:table-row;width:100%;}
.KBWrapper{display:table;width:100%}}

